fix: Fix plot view getting overlapped by filters (#638)
Just a quick fix for some visual error where filter widgets overlap the
plot view when theyre still open.

--- a/static/datavzrd.css
+++ b/static/datavzrd.css
@@ -71,6 +71,10 @@
     padding-top: 25%;
 }
 
+#heatmap-plot-modal {
+    z-index: 9999;
+}
+
 #modal-dialog-heatmap {
     position: relative;
     display: table;
